@@ -1,5 +1,16 @@
 2004-09-28  Ross Burton  <ross@burtonini.com>
 
+	* src/cd-drive.c:
+	Fix HAL compile, apparently. Thanks to Sjoerd Simons
+	<sjoerd@spring.luon.net>.
+	
+	* src/Makefile.am:
+	* tests/Makefile.am:
+	Actually add the HAL flags to the build.  First Colin and then
+	Sjoerd sent me this patch so I guess I should apply it...
+
+2004-09-28  Ross Burton  <ross@burtonini.com>
+
 	* configure.in:
 	Version 0.5.13.
 
